quad/nquads/raw.go
// line 1 "raw.rl"
// GO SOURCE FILE MACHINE GENERATED BY RAGEL; DO NOT EDIT

// Copyright 2014 The Cayley Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package nquads

import (
	"fmt"
	"unicode"

	"github.com/ducesoft/cayley/quad"
)

// line 30 "raw.go"
const raw_start int = 1
const raw_first_final int = 88
const raw_error int = 0

const raw_en_statement int = 1

// line 117 "raw.rl"

// ParseRaw returns a valid quad.Quad or a non-nil error. ParseRaw does
// handle comments except where the comment placement does not prevent
// a complete valid quad.Quad from being defined.
func ParseRaw(statement string) (quad.Quad, error) {
	data := []rune(statement)

	var (
		cs, p int
		pe    = len(data)
		eof   = pe

		subject   = -1
		predicate = -1
		object    = -1
		label     = -1

		isEscaped bool

		q quad.Quad
	)

	// line 63 "raw.go"
	{
		cs = raw_start
	}

	// line 141 "raw.rl"

	// line 71 "raw.go"
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 1:
			goto st_case_1
		case 0:
			goto st_case_0
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 90:
			goto st_case_90
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 91:
			goto st_case_91
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 92:
			goto st_case_92
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		}
		goto st_out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 9:
			goto st1
		case 32:
			goto st1
		case 60:
			goto tr2
		case 95:
			goto tr3
		}
		goto tr0
	tr0:
		// line 88 "raw.rl"

		if p < len(data) {
			if r := data[p]; r < unicode.MaxASCII {
				return q, fmt.Errorf("%v: unexpected rune %q at %d", quad.ErrInvalid, data[p], p)
			} else {
				return q, fmt.Errorf("%v: unexpected rune %q (\\u%04x) at %d", quad.ErrInvalid, data[p], data[p], p)
			}
		}
		return q, quad.ErrIncomplete

		goto st0
		// line 295 "raw.go"
	st_case_0:
	st0:
		cs = 0
		goto _out
	tr2:
		// line 33 "raw.rl"

		subject = p

		goto st2
	tr120:
		// line 29 "raw.rl"

		isEscaped = true

		goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		// line 319 "raw.go"
		switch data[p] {
		case 33:
			goto st2
		case 62:
			goto st3
		case 92:
			goto st74
		case 95:
			goto st2
		case 126:
			goto st2
		}
		switch {
		case data[p] < 61:
			if 35 <= data[p] && data[p] <= 59 {
				goto st2
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st2
				}
			case data[p] >= 97:
				goto st2
			}
		default:
			goto st2
		}
		goto tr0
	tr121:
		// line 29 "raw.rl"

		isEscaped = true

		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		// line 362 "raw.go"
		switch data[p] {
		case 9:
			goto tr7
		case 32:
			goto tr7
		case 60:
			goto tr8
		}
		goto tr0
	tr7:
		// line 49 "raw.rl"

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		q.Subject = unEscapeRaw(data[subject:p], isEscaped)
		isEscaped = false

		goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		// line 388 "raw.go"
		switch data[p] {
		case 9:
			goto st4
		case 32:
			goto st4
		case 60:
			goto tr10
		}
		goto tr0
	tr8:
		// line 49 "raw.rl"

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		q.Subject = unEscapeRaw(data[subject:p], isEscaped)
		isEscaped = false

		// line 37 "raw.rl"

		predicate = p

		goto st5
	tr10:
		// line 37 "raw.rl"

		predicate = p

		goto st5
	tr108:
		// line 29 "raw.rl"

		isEscaped = true

		goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		// line 433 "raw.go"
		switch data[p] {
		case 33:
			goto st5
		case 62:
			goto st6
		case 92:
			goto st64
		case 95:
			goto st5
		case 126:
			goto st5
		}
		switch {
		case data[p] < 61:
			if 35 <= data[p] && data[p] <= 59 {
				goto st5
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st5
				}
			case data[p] >= 97:
				goto st5
			}
		default:
			goto st5
		}
		goto tr0
	tr109:
		// line 29 "raw.rl"

		isEscaped = true

		goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		// line 476 "raw.go"
		switch data[p] {
		case 9:
			goto tr14
		case 32:
			goto tr14
		case 34:
			goto tr15
		case 60:
			goto tr16
		case 95:
			goto tr17
		}
		goto tr0
	tr14:
		// line 57 "raw.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscapeRaw(data[predicate:p], isEscaped)
		isEscaped = false

		goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		// line 506 "raw.go"
		switch data[p] {
		case 9:
			goto st7
		case 32:
			goto st7
		case 34:
			goto tr19
		case 60:
			goto tr20
		case 95:
			goto tr21
		}
		goto tr0
	tr15:
		// line 57 "raw.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscapeRaw(data[predicate:p], isEscaped)
		isEscaped = false

		// line 41 "raw.rl"

		object = p

		goto st8
	tr19:
		// line 41 "raw.rl"

		object = p

		goto st8
	tr79:
		// line 29 "raw.rl"

		isEscaped = true

		goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		// line 555 "raw.go"
		switch data[p] {
		case 34:
			goto st9
		case 92:
			goto st46
		}
		switch {
		case data[p] < 11:
			if 0 <= data[p] && data[p] <= 9 {
				goto st8
			}
		case data[p] > 12:
			if 14 <= data[p] && data[p] <= 1114111 {
				goto st8
			}
		default:
			goto st8
		}
		goto tr0
	tr80:
		// line 29 "raw.rl"

		isEscaped = true

		goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		// line 587 "raw.go"
		switch data[p] {
		case 9:
			goto tr25
		case 32:
			goto tr25
		case 46:
			goto tr26
		case 60:
			goto tr27
		case 64:
			goto st28
		case 94:
			goto st32
		case 95:
			goto tr30
		}
		goto tr0
	tr25:
		// line 65 "raw.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscapeRaw(data[object:p], isEscaped)
		isEscaped = false

		goto st10
	tr96:
		// line 65 "raw.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscapeRaw(data[object:p], isEscaped)
		isEscaped = false

		// line 73 "raw.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscapeRaw(data[label:p], isEscaped)
		isEscaped = false

		goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		// line 641 "raw.go"
		switch data[p] {
		case 9:
			goto st10
		case 32:
			goto st10
		case 46:
			goto st88
		case 60:
			goto tr33
		case 95:
			goto tr34
		}
		goto tr0
	tr26:
		// line 65 "raw.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscapeRaw(data[object:p], isEscaped)
		isEscaped = false

		goto st88
	tr39:
		// line 73 "raw.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscapeRaw(data[label:p], isEscaped)
		isEscaped = false

		goto st88
	st88:
		if p++; p == pe {
			goto _test_eof88
		}
	st_case_88:
		// line 682 "raw.go"
		switch data[p] {
		case 9:
			goto st88
		case 32:
			goto st88
		case 35:
			goto tr127
		}
		goto st0
	tr127:
		// line 85 "raw.rl"

		goto st89
	st89:
		if p++; p == pe {
			goto _test_eof89
		}
	st_case_89:
		// line 703 "raw.go"
		goto st89
	tr27:
		// line 65 "raw.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscapeRaw(data[object:p], isEscaped)
		isEscaped = false

		// line 45 "raw.rl"

		label = p

		goto st11
	tr33:
		// line 45 "raw.rl"

		label = p

		goto st11
	tr50:
		// line 29 "raw.rl"

		isEscaped = true

		goto st11
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		// line 740 "raw.go"
		switch data[p] {
		case 33:
			goto st11
		case 62:
			goto st12
		case 92:
			goto st14
		case 95:
			goto st11
		case 126:
			goto st11
		}
		switch {
		case data[p] < 61:
			if 35 <= data[p] && data[p] <= 59 {
				goto st11
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st11
				}
			case data[p] >= 97:
				goto st11
			}
		default:
			goto st11
		}
		goto tr0
	tr51:
		// line 29 "raw.rl"

		isEscaped = true

		goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		// line 783 "raw.go"
		switch data[p] {
		case 9:
			goto tr38
		case 32:
			goto tr38
		case 46:
			goto tr39
		}
		goto tr0
	tr38:
		// line 73 "raw.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscapeRaw(data[label:p], isEscaped)
		isEscaped = false

		goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		// line 809 "raw.go"
		switch data[p] {
		case 9:
			goto st13
		case 32:
			goto st13
		case 46:
			goto st88
		}
		goto tr0
	tr52:
		// line 29 "raw.rl"

		isEscaped = true

		goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		// line 831 "raw.go"
		switch data[p] {
		case 85:
			goto st15
		case 117:
			goto st19
		}
		goto tr0
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st16
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st16
			}
		default:
			goto st16
		}
		goto tr0
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st17
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st17
			}
		default:
			goto st17
		}
		goto tr0
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st18
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st18
			}
		default:
			goto st18
		}
		goto tr0
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st19
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st19
			}
		default:
			goto st19
		}
		goto tr0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st20
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st20
			}
		default:
			goto st20
		}
		goto tr0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st21
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st21
			}
		default:
			goto st21
		}
		goto tr0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st22
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st22
			}
		default:
			goto st22
		}
		goto tr0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st23
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st23
			}
		default:
			goto st23
		}
		goto tr0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 33:
			goto tr50
		case 62:
			goto tr51
		case 92:
			goto tr52
		case 95:
			goto tr50
		case 126:
			goto tr50
		}
		switch {
		case data[p] < 61:
			if 35 <= data[p] && data[p] <= 59 {
				goto tr50
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto tr50
				}
			case data[p] >= 97:
				goto tr50
			}
		default:
			goto tr50
		}
		goto tr0
	tr30:
		// line 65 "raw.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscapeRaw(data[object:p], isEscaped)
		isEscaped = false

		// line 45 "raw.rl"

		label = p

		goto st24
	tr34:
		// line 45 "raw.rl"

		label = p

		goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		// line 1046 "raw.go"
		if data[p] == 58 {
			goto st25
		}
		goto tr0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if data[p] == 95 {
			goto st26
		}
		switch {
		case data[p] < 895:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st26
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st26
					}
				case data[p] > 767:
					if 880 <= data[p] && data[p] <= 893 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		case data[p] > 8191:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8204 <= data[p] && data[p] <= 8205 {
						goto st26
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st26
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		default:
			goto st26
		}
		goto tr0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 9:
			goto tr38
		case 32:
			goto tr38
		case 45:
			goto st26
		case 46:
			goto tr55
		case 95:
			goto st26
		case 183:
			goto st26
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st26
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st26
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st26
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st26
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		default:
			goto st26
		}
		goto tr0
	tr55:
		// line 73 "raw.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscapeRaw(data[label:p], isEscaped)
		isEscaped = false

		goto st90
	st90:
		if p++; p == pe {
			goto _test_eof90
		}
	st_case_90:
		// line 1228 "raw.go"
		switch data[p] {
		case 9:
			goto st88
		case 32:
			goto st88
		case 35:
			goto tr127
		case 45:
			goto st26
		case 46:
			goto st27
		case 95:
			goto st26
		case 183:
			goto st26
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st26
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st26
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st26
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st26
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		default:
			goto st26
		}
		goto st0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 45:
			goto st26
		case 46:
			goto st27
		case 95:
			goto st26
		case 183:
			goto st26
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st26
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st26
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st26
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st26
					}
				default:
					goto st26
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st26
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st26
					}
				default:
					goto st26
				}
			default:
				goto st26
			}
		default:
			goto st26
		}
		goto tr0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st29
			}
		case data[p] >= 65:
			goto st29
		}
		goto tr0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 9:
			goto tr25
		case 32:
			goto tr25
		case 45:
			goto st30
		case 46:
			goto tr26
		case 60:
			goto tr27
		case 95:
			goto tr30
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st29
			}
		case data[p] >= 65:
			goto st29
		}
		goto tr0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st31
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		default:
			goto st31
		}
		goto tr0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 9:
			goto tr25
		case 32:
			goto tr25
		case 45:
			goto st30
		case 46:
			goto tr26
		case 60:
			goto tr27
		case 95:
			goto tr30
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st31
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		default:
			goto st31
		}
		goto tr0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		if data[p] == 94 {
			goto st33
		}
		goto tr0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		if data[p] == 60 {
			goto st34
		}
		goto tr0
	tr16:
		// line 57 "raw.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscapeRaw(data[predicate:p], isEscaped)
		isEscaped = false

		// line 41 "raw.rl"

		object = p

		goto st34
	tr20:
		// line 41 "raw.rl"

		object = p

		goto st34
	tr73:
		// line 29 "raw.rl"

		isEscaped = true

		goto st34
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		// line 1539 "raw.go"
		switch data[p] {
		case 33:
			goto st34
		case 62:
			goto st35
		case 92:
			goto st36
		case 95:
			goto st34
		case 126:
			goto st34
		}
		switch {
		case data[p] < 61:
			if 35 <= data[p] && data[p] <= 59 {
				goto st34
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st34
				}
			case data[p] >= 97:
				goto st34
			}
		default:
			goto st34
		}
		goto tr0
	tr74:
		// line 29 "raw.rl"

		isEscaped = true

		goto st35
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		// line 1582 "raw.go"
		switch data[p] {
		case 9:
			goto tr25
		case 32:
			goto tr25
		case 46:
			goto tr26
		case 60:
			goto tr27
		case 95:
			goto tr30
		}
		goto tr0
	tr75:
		// line 29 "raw.rl"

		isEscaped = true
